# peon

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: config.cmake  util.cmake
extlib/glad/: glad.h
extlib/inc/freetype/config/: ftheader.h
extlib/include/glad/: glad.c
extlib/include/gtest/internal/: gtest-internal.h
extlib/include/stb/: stb_image.h
extlib/msvc/x64/debug/: SOIL.lib  assimp.lib  freetype2.lib  glew32s.lib  glfw3.lib
extlib/msvc/x64/release/: SOIL.lib  assimp.lib  freetype2.lib  glew32s.lib  glfw3.lib
game/: .gitattributes  CMakeLists.txt
game/res/models/bb8/: BB 8 rig 1.max  BB 8 rig 2.max  bb8.mtl
game/res/shaders/: Default.frag  Default.vert  LightSource.frag  LightSource.vert  PassThrough.frag  PassThrough.vert  Texture.frag  Texture.vert  bp-light-map.frag  bp-light-map.vert  bp-materials.frag  bp-materials.vert  bp-textured.frag  bp-textured.vert
game/src/: Atlas.h  Component.cpp  Component.h  ComponentIterator.h  ComponentPools.h  ComponentTypes.h  ComponentView.h  EcsConstants.h  EcsTypes.h  Entity.cpp  Entity.h  EntityIterator.cpp  EntityIterator.h  EntityView.cpp  EntityView.h  Loaders.cpp  Loaders.h  Physics.cpp  Physics.h  Pool.cpp  Pool.h  PoolIterator.cpp  PoolIterator.h  Scene.cpp  Scene.h  SceneView.h  main.cpp
game/src/components/: Components.h
game/src/physics/: CollisionShape.h  MotionState.cpp  MotionState.h  PhysicsSystem.cpp  PhysicsSystem.h  RigidBody.cpp  RigidBody.h
game/test/: test_pool.cpp
peon/: .gitignore  CMakeLists.txt  Peon.cpp  Peon.h
peon/common/: CompileFlags.h  Filesystem.cpp  Filesystem.h  Grid.cpp  Grid.h  Macros.h  TypeAliases.h  Uncopyable.h  Utility.cpp  Utility.h
peon/entity/: Component.cpp  Component.h  ComponentIterator.h  ComponentPools.h  ComponentTypes.h  ComponentView.h  EcsTypes.h  EntityIterator.cpp  EntityIterator.h  EntityView.h  Pool.h  PoolIterator.h  Scene.cpp  Scene.h
peon/event/: Bus.cpp  Bus.h  Event.cpp  Event.h  EventDispatcher.h  EventDispatcher.inl  EventGroup.h  EventGroup.inl  EventHandler.h  EventHandler.inl  EventListener.h  EventListener.inl  KeyEvent.h  KeyListener.h  MouseEvent.h  Signal.h  WindowEvent.h  WindowListener.h
peon/graphics/: Atlas.h  BPLightMapPass.h  BPTexturedPass.h  Camera.cpp  Camera.h  FreeLookCamera.cpp  FreeLookCamera.h  FreelookCamera.h  GLContext.cpp  GLContext.h  GLContextOpts.cpp  GLContextSettings.cpp  GLContextSettings.h  GLDisplayDevice.cpp  GLDisplayDevice.h  GLDisplayDeviceManager.cpp  GLDisplayDeviceManager.h  GLGammaRamp.cpp  GLGammaRamp.h  GLMonitor.cpp  GLMonitor.h  GLProgram.cpp  GLProgram.h  GLRenderContext.cpp  GLRenderContext.h  GLRenderWindow.cpp  GLRenderWindow.h  GLShader.cpp  GLShader.h  GLSurface.h  GLTexture.cpp  GLTexture.h  GLVertexBuffer.h  GLVideoMode.cpp  GLVideoMode.h  GLWindow.cpp  GLWindow.h  GLWindowOpts.cpp  GLWindowOpts.h  GLWindowSettings.cpp  (+10 more)
peon/graphics/opengl/: GLContext.cpp  GLContext.h  GLContextOpts.h  GLMonitor.cpp  GLMonitor.h  GLProgram.cpp  GLProgram.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  GLTexture2D.cpp  GLTexture2D.h  GLVertexArray.cpp  GLVertexArray.h  GLVertexBuffer.cpp  GLVertexBuffer.h  GLVideoMode.cpp  GLVideoMode.h  GLViewport.h  GLWindow.cpp  GLWindow.h  GraphicsExtensions.h
peon/input/: FreeLookCamera.cpp  FreeLookCamera.h  FreelookController.cpp  FreelookController.h  Key.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
peon/internal/: Startup.h
peon/log/: LogStream.h  Logfile.cpp  Logfile.h  Logger.cpp  Logger.h  RotatingLogfile.cpp  RotatingLogfile.h  StandardOut.cpp  StandardOut.h  StdoutStream.cpp  StdoutStream.h
peon/physics/: CollisionShape.h  MotionState.cpp  MotionState.h  PhysicsSystem.cpp  PhysicsSystem.h  RigidBody.cpp  RigidBody.h
peon/profile/: BlockTimer.cpp  BlockTimer.h  Profile.h  RecordKeeper.cpp  RecordKeeper.h  TimeRecord.h  Timer.cpp  Timer.h
